--- a/server_one/pom.xml
+++ b/server_one/pom.xml
@@ -11,6 +11,13 @@
     <groupId>org.distributed_springcloud</groupId>
     <artifactId>server_one</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+<!--            <version>2.2.5.RELEASE</version>-->
+        </dependency>
+    </dependencies>
 
     
 </project>
