--- a/server_three/pom.xml
+++ b/server_three/pom.xml
@@ -9,10 +9,17 @@
 	</parent>
 	<groupId>org.distributed_springcloud</groupId>
 	<artifactId>server_three</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0-SNAPSHOT</version>
 	<name>server_three</name>
 	<description>Demo project for Spring Boot</description>
 
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+<!--			<version>2.2.5.RELEASE</version>-->
+		</dependency>
+	</dependencies>
 
 
 
