--- a/server_tow/pom.xml
+++ b/server_tow/pom.xml
@@ -12,5 +12,11 @@
     <artifactId>server_tow</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+<!--            <version>2.2.5.RELEASE</version>-->
+        </dependency>
+    </dependencies>
 </project>
