--- a/server_tow/src/main/resources/application.yml
+++ b/server_tow/src/main/resources/application.yml
@@ -1,1 +1,9 @@
-
+server:
+  port: 9002
+spring:
+  application:
+    name: SERVICE_AGENT
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:9999/eureka/
